<resources>
    <!-- App -->
    <string name="app_name">Final_Project_PRM392</string>

    <!-- Login & chung -->
    <string name="schedule_appointments_nwith_ease">Schedule Appointments\nWith Ease</string>
    <string name="how_are_you_today">How Are You Today?</string>
    <string name="hi_mosen_jamali">Hi, Mosen Jamali</string>
    <string name="searching">Searching...</string>
    <string name="back">Back</string>

    <!-- Profile Screen -->
    <string name="profile_title">My Profile</string>
    <string name="profile_add_photo">Add Photo</string>
    <string name="profile_change_photo">Change Photo</string>
    <string name="profile_hint_full_name">Full Name</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_hint_phone">Phone Number</string>
    <string name="profile_hint_medical_history">Medical History</string>
    <string name="profile_btn_save">Save Changes</string>
    <string name="profile_btn_logout">Logout</string>
    <string name="profile_btn_change_password">Change Password</string>
    <string name="profile_hint_current_password">Current Password</string>
    <string name="profile_hint_new_password">New Password</string>
    <string name="profile_hint_confirm_password">Confirm New Password</string>
    <string name="profile_btn_submit_password">Submit New Password</string>

    <!-- Others -->
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="see_all">See all</string>
</resources>
